# HelloWorld

./: git_push.bat
Alsa/: CMakeLists.txt  build.bat
Alsa/Source/: main.c
Boost/: CMakeLists.txt  build.bat
Boost/Source/: main.cpp
Boost/Source/FileSystem/: FileSystem.cpp
Boost/Source/Network/: tcp.cpp
Boost/Source/Synchornization/: Synchornization.cpp
D3D10/Glfw/Triangle/: CMakeLists.txt
D3D10/Glfw/Triangle/Source/: D3D10_Triangle.cpp
D3D11/Glfw/Triangle/: CMakeLists.txt
D3D12/Glfw/Triangle/: CMakeLists.txt
D3D12/Glfw/Triangle/Source/: D3D12_Triangle.cpp
D3D9/Glfw/Triangle/: CMakeLists.txt
D3D9/Glfw/Triangle/Source/: D3D9_Triangle.cpp
FFmpeg/: CMakeLists.txt  build.bat
FFmpeg/Source/: Commandline.h  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  Encoder.cpp  Encoder.h  demux_decode.cpp  main.cpp
HelloCompileTool/: CMakeLists.txt  build_Cygwin.bat  build_MSYS.bat  build_MSYS_VS.bat  build_MinGW.bat  build_MinGW_VS.bat  build_Ninja.bat  build_Ninja_VS.bat  build_Unix_Makefiles.bat  build_Unix_Makefiles_VS.bat  build_vs.bat
HelloCompileTool/Source/: CMake.cpp  Cygwin.cpp  MSYS.cpp  Meson.cpp  MinGW.cpp  main.cpp
LinuxDriver/HelloCharDeviceDriver/app/: HelloCharDeviceDriverApp.c
LinuxDriver/HelloCharDeviceDriver/driver/: Makefile
LinuxDriver/HelloFramebufferDriver/driver/: Makefile
LinuxDriver/HelloIICDriver/driver/: HelloGPIODriver.c  Makefile
LinuxDriver/HelloInputDeviceDriver/driver/: HelloInputDeviceDriver.h  Makefile
LinuxDriver/HelloPlatformDeviceDriver/driver/: Makefile
LinuxDriver/HelloSPIDriver/app/: HelloGPIODriver.c
LinuxDriver/HelloWorld/: Makefile  helloworld.c
Optix/HelloWorld/: CMakeLists.txt  Readme.txt  build.bat  build.sh
Optix/HelloWorld/Source/: HelloWorld.cpp
Portaudio/: CMakeLists.txt  build.bat
Portaudio/Source/: Example.cpp  Test.cpp  main.cpp
Qt/: CMakeLists.txt  build_qt5.bat  build_qt6.bat
Qt/Documentation/: Vulkan.md  ubuntu安装qt5.txt
Qt/Documentation/Core/: Creating Custom Qt Types.txt  Signals & Slots.txt  The Property System.txt
Qt/Documentation/QML/: Basic Types.txt  Object Types.txt  QML.cpp  overview.txt
Qt/Documentation/QML/QML/: Item.txt
Qt/Documentation/QML/Qt Quick/: Item.h  Qt Quick.txt
Qt/Documentation/QML/Qt Quick Controls/: AbstractButton.h  Button.txt  CheckBox.txt  Container.h  Control.h  Control.txt  Pane.h  Popup.h  Qt Quick Controls.txt
Qt/Documentation/QML/Qt Quick Dialogs/: ColorDialog.h  Dialog.h  FileDialog.h  MessageDialog.h
Qt/Documentation/QML/Style/: Creating a Custom Style.txt  Style.txt
Qt/Documentation/QML/自定义控件/: ComboBox.txt
Qt/Documentation/QML版本/: QT版本与QML版本.txt
Qt/Release/translations/: qt_ca.qm  qt_de.qm  qt_ka.qm  qt_pl.qm
Qt/Source/: main.cpp
Qt/Source/MyQML/: LeftView.qml  MyButton.qml  MyButton2.qml  MyDrawer.qml  MyWindow.qml  MyWindowUsingMyDrawer.qml
Qt/Source/QML/: HelloQML.cpp
Qt/Source/QML Examples/MenuBar_1/: MyWindow.qml
Qt/Source/QML Examples/Project/: MyWindow.qml
Qt/Source/QWidget/: HelloQWidget.cpp
SFML3/: CMakeLists.txt  build.bat
SFML3/Source/: main.cpp
V4L2/: CMakeLists.txt  build.bat
V4L2/Source/: Capability.c  Documentation.c  main.c
WASAPI/: CMakeLists.txt  build.bat
WASAPI/Source/: main.cpp
WebGL/: HelloWebGL.html
